src/snapshots/ck__ui_tests__reading_mid_thread.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Thread 2000                                                         60 posts


    post 11
    and a line
    and a line
    and a line
    and a line



    Anonymous  2026-09-21 13:13 · 1h ago  No.2012

    post 12
    and a line
    and a line
    and a line
    and a line
    and a line



    Anonymous  2026-09-21 13:13 · 1h ago  No.2013

    post 13
    and a line
    and a line
    and a line
    and a line
 j/k post   tab images & links   f hints   . more   enter quote   u back   / search   w watch   , se
