src/snapshots/ck__ui_tests__replies_inline.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread                                            5 posts  ·  2 new


                      Anonymous   OP  2026-09-21 09:13 · 5h ago  No.1000
                      Snapshot thread
                      op.png  800x600 · 121 KB

           …          A thread for snapshot tests.
                      It has a few replies.

                      Replies  >>1001



        Anonymous  2026-09-21 10:13 · 4h ago  No.1001

        >>1000 (OP)
        >implying

        Replies  >>1003



            Anonymous   new  2026-09-21 12:13 · 2h ago  No.1003

            secret and >>1001



 j/k post   enter quote   p preview   u back   / search   U unread   v view   w watch   , settings
