src/snapshots/ck__ui_tests__reply_box.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread                                            5 posts  ·  2 new
    Reply to /g/ No.1000                             ctrl-s post · tab next · esc keep for later

    Name     Anonymous
    Options  sage, …
    Comment  hello

















                                                                                          5/2000
    File     a path: ~/pictures/cat.png
    Spoiler  [ ] spoiler the file (space)



 j/k post   v view image   . more   tab images & links   c conversation   ? help          1/5  20%
