src/snapshots/ck__ui_tests__saved.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Saved                                                                     3 threads  ·  117 KB

    4chan      /g/       Snapshot thread  No.1000                   watching   5 posts  ·  1m ago
    4chan      /g/       Old thread  No.900                           dead   300 posts  ·  5h ago
    4chan      /b/       Random thread  No.5                                   9 posts  ·  2d ago
























 enter read   . more   x remove   / filter   , settings   ? help
