src/snapshots/ck__ui_tests__saved_search_results.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Saved  ›  Search: rust                                                               2 results

    searching… 2 of 5 saved threads

  ▌ Anonymous  4chan/g/1000                                                   No.1002  ·  1h ago
    we were talking about rust and the borrow checker today


    Anonymous  4chan/g/900   OP                                                No.900  ·  1h ago
    Rust or C++?



















 enter read the saved copy   R search again   esc back   , settings   ? help              1/2  50%
