src/snapshots/ck__ui_tests__saving_the_thread_asks_first.snap
---
source: src/ui_tests.rs
assertion_line: 1094
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread                                 5 posts  ·  2 new, 2 below ↓


    Anonymous   OP  2026-09-21 09:13 · 5h ago  No.1000
    Snapshot thread
    op.png  800x600 · 121 KB

    A thread for snapshot tests.
    It has a few replies.

    Replies  >>1001

                        Save the thread as a page?   enter save · esc cancel

    Anonymous  2026-09  thread.html and thread.json (5 posts)
                        to /saves/g/1000
    >>1000 (OP)         and a copy in Saved
    >implying

    Replies  >>1003



    Anonymous  2026-09-21 11:13 · 3h ago  No.1002

    Code:
    fn main() {
        println!("snapshot");
    }
 j/k post   tab images & links   f hints   . more   enter quote   c conversation   u back   / search
