src/snapshots/ck__ui_tests__settings.snap
---
source: src/ui_tests.rs
assertion_line: 698
expression: snapshot(&mut a)
---
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the current theme
    Color depth       auto (24-bit)                     24-bit color, or the nearest of 256
    Reading position  30% from the edges                How far from the edges the selected post…

  Catalog
    Default layout    cards                             c in a catalog sets a board's own
    Images            on                                Thumbnails and the image viewer (after a…
    NSFW boards       images shown                      Images on boards the site marks NSFW
    Board images      none                              Boards with their own image setting (. m…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; X adds one…

  Background refresh
    Open thread       every 10s                         How often the open thread updates
    Watched threads   every 60s                         How often each watched thread updates
    Notifications     auto (terminal bell)              New posts in watched threads, replies to…
    Reading the end   new posts come into view          New posts come into view while you read …

  Sites
    Add a site        23 sites so far                   Paste a link to any page of it; ck finds…
    Your sites        only the built-in ones            The ones you added, or built-in ones you…

  Downloads
    Folder            ~/Downloads/ck/{site}/{board}/{…  Where saved files and pages go

  Startup
 enter change   esc back   , settings   ? help
