src/snapshots/ck__ui_tests__settings_list_popups.snap
---
source: src/ui_tests.rs
expression: "shots.join(\"\\n=====\\n\")"
---
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the current theme
    Color depth       auto (24-bit)                     24-bit color, or the nearest of 256
    R  Your sites                        a add · r update a vichan site's boards · x remove · esc close

  Cat  None yet: only the built-in sites. a adds one from a link to it.
    D
    I
    N  Kept in the config as [[site]] tables; the built-in sites are always there too.
    B                                                                                                    b…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; X adds one from a po…
    Hidden words      none                              Posts with any of these words are hidden, everywhe…

  Background refresh
    Open thread       every 10s                         How often the open thread updates
    Watched threads   every 60s                         How often each watched thread updates
 enter change   esc back   ? help

=====
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the current theme
    C  Your sites                        a add · r update a vichan site's boards · x remove · esc close
    R
       one               vichan     https://one.example                                           added
  Cat  lainchan          vichan     https://lainchan.example                       changes the built-in
    D  three             vichan     https://three.example                            x again removes it
    I
    N
    B  Kept in the config as [[site]] tables; the built-in sites are always there too.                   b…
    F                                                                                                    o…
    Hidden words      none                              Posts with any of these words are hidden, everywhe…

  Background refresh
    Open thread       every 10s                         How often the open thread updates
    Watched threads   every 60s                         How often each watched thread updates
 enter change   esc back   ? help

=====
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the curren…
    Color   Board images                     x back to the default · esc close  rest o…
    Readin                                                                      he sel…
            None: every board follows the default. A board's . menu changes it
  Catalog
    Defaul  Boards the site marks NSFW follow the NSFW boards setting; the res  ard's …
    Images                                                                       viewe…
    NSFW boards       images shown                      Images on boards the site mark…
    Board images      none                              Boards with their own image se…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; …
    Hidden words      none                              Posts with any of these words …
 enter change   esc back   ? help

=====
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors  Board images                     x back to the default · esc close  curren…
    Color                                                                       rest o…
    Readin  4chan/b                                                 images off  he sel…
            4chan/g                                                  images on
  Catalog
    Defaul  Boards the site marks NSFW follow the NSFW boards setting; the res  ard's …
    Images                                                                       viewe…
    NSFW boards       images shown                      Images on boards the site mark…
    Board images      2 boards                          Boards with their own image se…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; …
    Hidden words      none                              Posts with any of these words …
 enter change   esc back   ? help

=====
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors  Hidden words                          a add · x remove · esc close  curren…
    Color                                                                       rest o…
    Readin  None yet. a adds one; so does w in a post's X.                      he sel…

  Catalog
    Defaul  Whole words, any case. Kept in the config as hidden_words.          ard's …
    Images                                                                       viewe…
    NSFW boards       images shown                      Images on boards the site mark…
    Board images      2 boards                          Boards with their own image se…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; …
    Hidden words      none                              Posts with any of these words …
 enter change   esc back   ? help

=====
 ck  Settings

  Appearance
    Theme   Hidden words                          a add · x remove · esc close  ing
    Colors                                                                      curren…
    Color   crypto                                                              rest o…
    Readin  free money                                                          he sel…
            λ
  Catalog
    Defaul                                                                      ard's …
    Images  Whole words, any case. Kept in the config as hidden_words.           viewe…
    NSFW b                                                                      e mark…
    Board images      2 boards                          Boards with their own image se…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; …
    Hidden words      3 words                           Posts with any of these words …
 enter change   esc back   ? help

=====
 ck  Settings

  Appearance
    Theme   Hidden words                                enter add · esc cancel  ing
    Colors                                                                      curren…
    Color   crypto                                                              rest o…
    Readin  free money                                                          he sel…
            λ
  Catalog
    Defaul  New  spa▏                                                           ard's …
    Images  Whole words, any case. Kept in the config as hidden_words.           viewe…
    NSFW b                                                                      e mark…
    Board images      2 boards                          Boards with their own image se…
    Filters           0 filters, 0 hidden by hand       Hide or highlight by pattern; …
    Hidden words      3 words                           Posts with any of these words …
 enter change   esc back   ? help

=====
 ck  Settings

  Appearan  Hidden words                          a add · x remove · esc close
    Theme                                                                       ing
    Colors  word20                                                              curren…
    Color   word21                                                              rest o…
    Readin  word22                                                              he sel…
            word23
  Catalog   word24
    Defaul  word25                                                              ard's …
    Images                                                                       viewe…
    NSFW b                                                                      e mark…
    Board   Whole words, any case. Kept in the config as hidden_words.          age se…
    Filter                                                                      tern; …
    Hidden words      30 words                          Posts with any of these words …
 enter change   esc back   ? help

=====
 ck  Settings

  Appearan  Hidden words                                enter add · esc cancel
    Theme                                                                       ing
    Colors  word20                                                              curren…
    Color   word21                                                              rest o…
    Readin  word22                                                              he sel…
            word23
  Catalog   word24
    Defaul  word25                                                              ard's …
    Images                                                                       viewe…
    NSFW b  New  x▏                                                             e mark…
    Board   Whole words, any case. Kept in the config as hidden_words.          age se…
    Filter                                                                      tern; …
    Hidden words      30 words                          Posts with any of these words …
 enter change   esc back   ? help
